<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        style="@style/Sign_In_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register_title"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register_create_stord_account"
        style="@style/sign_in_info"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:hint="@string/register_username"
        android:background="@drawable/round_back"
        android:maxLines="1"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        style="@style/Default_text"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:hint="@string/register_email"
        android:background="@drawable/round_back"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        style="@style/Default_text"
        android:autofillHints="emailAddress" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_back">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/register_password"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:inputType="textPassword"
            android:maxLines="1"
            style="@style/Default_text"
            android:background="@android:color/transparent"
            android:autofillHints="password">
        </EditText>

        <ImageView
            android:id="@+id/passwordIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/invisible"
            android:contentDescription="@string/ImageDesc"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_back">

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/register_confirm_password"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:inputType="textPassword"
            android:maxLines="1"
            style="@style/Default_text"
            android:background="@android:color/transparent"
            android:autofillHints="password">
        </EditText>

        <ImageView
            android:id="@+id/confirm_password_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/invisible"
            android:contentDescription="@string/ImageDesc"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/errorTxtRegister"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="start"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:textColor="@color/red"
            />

        <TextView
            android:id="@+id/forgotPasswordButton"
            style="@style/Default_text"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:text="@string/register_forgot_password"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUnButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/register_sign_up"
        android:textAllCaps="false"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_back_sign_in"
        style="@style/Default_title"
        android:textColor="@color/white"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <View
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1A000000"
            android:layout_toStartOf="@+id/Ortxt"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/Ortxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register_or" />

        <View
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1A000000"
            android:layout_toEndOf="@+id/Ortxt"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/signInInstead"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/round_back_sign_in_2"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/Default_title"
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:maxLines="1"
            android:text="@string/register_button"
            android:textColor="@color/white"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="40dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_already_have_account"/>

    <TextView
        android:id="@+id/sign_in_btn"
        android:layout_marginStart="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_sign_in"
        android:textColor="@color/signInBlue"/>
    </LinearLayout>

</LinearLayout>