<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/category_card_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/home"
            android:contentDescription="@string/ImageDesc">
        </ImageView>
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/name_category"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/separator"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        style="@style/Default_text"
        android:ellipsize="end"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/description_category"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/description"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/separator"
        style="@style/Default_text"
        android:ellipsize="end"
        android:singleLine="true"/>

    <ImageView
        android:id="@+id/star_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/unfav_star"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/separator"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/ImageDesc"/>
</androidx.constraintlayout.widget.ConstraintLayout>